Commented out code character style

--- a/public/create/stylesets/book-color.css
+++ b/public/create/stylesets/book-color.css
@@ -152,6 +152,7 @@ code.block {
 }
 
 /*Name: Code*/
+/*
 code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
@@ -163,6 +164,7 @@ code {
 }
 
 
+*/
 /*Name: Caption*/
 figcaption {
 	font-family: "Junicode", serif;
