--- a/public/create/stylesets/extravaganza-bw.css
+++ b/public/create/stylesets/extravaganza-bw.css
@@ -160,6 +160,7 @@ code.block {
 }
 
 /*Name: Code*/
+/*
 code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
@@ -172,6 +173,7 @@ code {
 }
 
 
+*/
 /*Name: Caption*/
 figcaption {
 	font-family: "Crimson", serif;
