--- a/public/create/stylesets/extravaganza-color.css
+++ b/public/create/stylesets/extravaganza-color.css
@@ -163,6 +163,7 @@ code.block {
 }
 
 /*Name: Code*/
+/*
 code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
@@ -174,6 +175,7 @@ code {
 }
 
 
+*/
 /*Name: Caption*/
 figcaption {
 	font-family: "Crimson", serif;
