--- a/public/create/stylesets/future-color.css
+++ b/public/create/stylesets/future-color.css
@@ -150,6 +150,7 @@ code.block {
 }
 
 /*Name: Code*/
+/*
 code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
@@ -160,6 +161,7 @@ code {
 	background:#000000;
 }
 
+*/
 /*Name: Caption*/
 figcaption {
 	font-family: "Roboto", sans-serif;
