--- a/public/create/stylesets/light-bw.css
+++ b/public/create/stylesets/light-bw.css
@@ -145,6 +145,7 @@ code.block {
 }
 
 /*Name: Code*/
+/*
 code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
@@ -155,6 +156,7 @@ code {
 	background:#000000;
 }
 
+*/
 /*Name: Caption*/
 figcaption {
 	font-family: "Rambla", sans-serif;
