--- a/public/create/stylesets/simple-bw.css
+++ b/public/create/stylesets/simple-bw.css
@@ -148,6 +148,7 @@ code.block {
 }
 
 /*Name: Code*/
+/*
 code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
@@ -158,6 +159,7 @@ code {
 	background:#000000;
 }
 
+*/
 /*Name: Caption*/
 figcaption {
 	font-family: "Source Sans Pro", sans-serif;
