--- a/public/create/stylesets/simple-color.css
+++ b/public/create/stylesets/simple-color.css
@@ -136,6 +136,7 @@ code.block {
 }
 
 /*Name: Code*/
+/*
 code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
@@ -147,6 +148,7 @@ code {
 }
 
 
+*/
 /*Name: Caption*/
 figcaption {
 	font-family: "Source Sans Pro", sans-serif;
