--- a/public/create/stylesets/book-bw.css
+++ b/public/create/stylesets/book-bw.css
@@ -147,6 +147,7 @@ code.block {
 }
 
 /*Name: Code*/
+/*
 code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
@@ -158,6 +159,7 @@ code {
 }
 
 
+*/
 /*Name: Caption*/
 figcaption {
 	font-family: "Junicode", serif;
