--- a/public/create/stylesets/future-bw.css
+++ b/public/create/stylesets/future-bw.css
@@ -151,6 +151,7 @@ code.block {
 }
 
 /*Name: Code*/
+/*
 code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
@@ -161,6 +162,7 @@ code {
 	background:#000000;
 }
 
+*/
 /*Name: Caption*/
 figcaption {
 	font-family: "Roboto", sans-serif;
