--- a/public/create/stylesets/meta-bw.css
+++ b/public/create/stylesets/meta-bw.css
@@ -137,6 +137,7 @@ code.block {
 }
 
 /*Name: Code*/
+/*
 code {
 	font-family: "Source Code Pro", monospace;
 	font-style:normal;
@@ -147,6 +148,7 @@ code {
 	background:#000000;
 }
 
+*/
 /*Name: Caption*/
 figcaption {
 	font-family: "CMU Sans Serif", sans-serif;
