--- a/public/create/stylesets/open-color.css
+++ b/public/create/stylesets/open-color.css
@@ -152,6 +152,7 @@ code.block {
 }
 
 /*Name: Code*/
+/*
 code {
 	font-family: "Deja Vu Mono", monospace;
 	font-style:normal;
@@ -163,6 +164,7 @@ code {
 }
 
 
+*/
 /*Name: Caption*/
 figcaption {
 	font-family: "Open Sans", sans-serif;
