Fixed demo mode EXCEPT for #294. Demo mode works as follows:
* Create a demo user for the user's session when the user clicks "Go" on the frontpage (or rather, when the "login:failed" event is caught on the project space page).
* For a demo user, in project space, hide the "Settings" link in the Unisquare and the (green) "Verify your email" bar.
* Convert the demo user to a real user when user clicks "Register" (by calling `PUT /user/:id`, changing first name, last name, email (and the demo flag)).
* "Real", existing users who accidently (or otherwise) clicks "Go" instead of "Login" on the front page, can go back to the front page to log in.

Also:
* Implemented ability to clean up unused (demo) users: every time a user, demo or "real", makes a "significant" change, currently defined as changing a project or document, a "last action date" attribute is set on the user.
* Removed the "Demo Title" project per request from POs (feedback from the alpha test) (might be reintroduced with the "Tour of Scripler" task).
* Removed local storage: revisit when implementing some form of offline mode.
* Allow users to only register with first name.
* Don't send out any emails to demo users.
* Renamed: "Publication" -> "Project" and "validate" -> "verify".
* Various minor linguistic improvements in register bar messages.
* Fixed express "deprecated" warning for res.send().

--- a/public/css/pages/create.css
+++ b/public/css/pages/create.css
@@ -1,4 +1,4 @@
-.section-unisquare, .section-publications {
+.section-unisquare, .section-projects {
 	float: left;
 }
 .section-unisquare {
@@ -9,7 +9,7 @@
 	border: 1px solid #fff;
 	background: none #fefefe;
 }
-.section-publications {
+.section-projects {
 	margin: 0 0 0 10px !important;
 	min-height: 340px;
 	width: -webkit-calc(100% - 340px) !important;
@@ -18,7 +18,7 @@
 	width: calc(100% - 340px) !important;
 }
 
-.publication {
+.project {
 	position: relative;
 	margin: 0 15px 15px 0;
 	width: 95px;
@@ -29,18 +29,18 @@
 	display: table;
 	box-shadow: 3px 3px 5px 0px #999;
 }
-.publication.new {
+.project.new {
 	border: 1px dashed #eee;
 }
 
-.publication p {
+.project p {
 	display: table-cell; 
 	vertical-align: middle; 
 	text-align: center;
 	cursor: pointer;
 }
 
-.publication .publication-options-show {
+.project .project-options-show {
 	position: absolute;
 	top: 5px;
 	right: 5px;
@@ -53,7 +53,7 @@
 	-o-transition: all 0.5s ease-in-out;
 	transition: all 0.5s ease-in-out;
 }
-.publication:hover .publication-options-show, .publication .publication-options-show.active {
+.project:hover .project-options-show, .project .project-options-show.active {
 	background-color: #eee;
 	-webkit-transition: all 0.5s ease-in-out;
 	-moz-transition: all 0.5s ease-in-out;
@@ -61,7 +61,7 @@
 	transition: all 0.5s ease-in-out;
 }
 
-.publication .publication-options-show .arrow {
+.project .project-options-show .arrow {
 	width: 0;
 	height: 0;
 	border-left: 5px solid transparent;
@@ -69,11 +69,11 @@
 	border-top: 5px solid #fff;
 }
 
-.publication input {
+.project input {
 	margin-top: 30px !important;
 }
 
-.publication-options {
+.project-options {
 	position: absolute;
 	top: 20px;
 	right: 0;
@@ -84,36 +84,36 @@
 	border-radius: 5px;
 	border: 1px solid #eee;
 }
-.publication-options-header {
+.project-options-header {
 	border-bottom: 1px solid #eee;
 	text-align: center;
 	padding: 5px 0 10px;
 }
-.publication-options-hide {
+.project-options-hide {
 	position: absolute;
 	top: 5px;
 	right: 10px;
 	cursor: pointer;
 }
-.publication-options-menupoint {
+.project-options-menupoint {
 	cursor: pointer;
 	margin: 2px -10px;
 	padding: 5px 15px;
 	text-transform: capitalize;
 }
-.publication-options-menupoint:hover {
+.project-options-menupoint:hover {
 	background: none #ffffcc;
 }
-.publication-options-dates {
+.project-options-dates {
 	border-top: 1px solid #eee;
 	padding: 10px 0 5px;
 }
-.publication-options-dates div {
+.project-options-dates div {
 	font-size: 10px;
 	width: 40%;
 	float: left;
 }
-.publication-options-dates div.dates {
+.project-options-dates div.dates {
 	color: #ccc;
 	font-size: 10px;
 	width: 60%;
