--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -61,8 +61,8 @@
 	position: absolute;
 	top: 5px;
 	right: 5px;
-	background-color: #fff;
-	border-radius: 2px;
+	/*background-color: #000;*/
+	/*border-radius: 2px;*/
 	padding: 4px 2px;
 	cursor: pointer;
 	-webkit-transition: all 0.5s ease-in-out;
@@ -71,11 +71,11 @@
 	transition: all 0.5s ease-in-out;
 }
 .project:hover .project-options-show, .project .project-options-show.active {
-	background-color: #eee;
+	/*background-color: #eee;
 	-webkit-transition: all 0.5s ease-in-out;
 	-moz-transition: all 0.5s ease-in-out;
 	-o-transition: all 0.5s ease-in-out;
-	transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;*/
 }
 
 .project .project-options-show .arrow {
@@ -83,7 +83,7 @@
 	height: 0;
 	border-left: 5px solid transparent;
 	border-right: 5px solid transparent;
-	border-top: 5px solid #fff;
+	border-top: 5px solid #000;
 }
 
 .project input {
@@ -107,10 +107,12 @@
 	padding: 5px 0 10px;
 }
 .project-options-hide {
-	position: absolute;
-	top: 5px;
-	right: 10px;
-	cursor: pointer;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width:100%;
+	height:100%;
+	z-index:-1;
 }
 .project-options-menupoint {
 	cursor: pointer;
@@ -312,3 +314,4 @@ hr {
 .archived a {
 	color: #6B6B6B;
 }
+
