--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -384,3 +384,28 @@ textarea {
 	right: 0;
 	z-index: 99999;
 }
+
+
+.feedback{
+	background:#d6d6d6;
+	position:fixed;
+	bottom:0;
+	right:0;
+	width: 50px;
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+	height: calc(100% / 3);
+	cursor: pointer;
+	min-height: 190px;
+	padding: 0;
+	text-align: center;
+}
+
+.feedback img {
+	position: relative;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
