--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -384,3 +384,47 @@ textarea {
 	right: 0;
 	z-index: 99999;
 }
+
+/* Styling for autocomplete */
+.autocomplete{
+  width: 100%;
+  position: relative;
+}
+
+.autocomplete input {
+  font-size: 1.2em;
+  width: 100%;
+  padding:0.4em;
+}
+
+.autocomplete ul {
+  position: absolute;
+  top: 30px;
+  left: 0;
+  width: 100%;
+  border-left: 1px solid #efefef;
+  border-right: 1px solid #efefef;
+  border-bottom: 1px solid #efefef;
+  z-index: 5;
+}
+
+.autocomplete li {
+  text-align: left;
+  list-style:none;
+  width: 100%;
+  padding:0.4em;
+  background-color: #fff;
+}
+
+.autocomplete li.active {
+  width: 100%;
+  background-color: #fff265;
+}
+
+.autocomplete .highlight {
+  background-color: #E2E2E2;
+}
+
+.autocomplete li.active .highlight {
+  background: #fff265;
+}
