--- a/public/create/pages/css/shared/angucomplete-alt.css
+++ b/public/create/pages/css/shared/angucomplete-alt.css
@@ -65,6 +65,12 @@
 .angucomplete-highlight {
     font-weight: bold;
 }
-.angucomplete-selected-required {
+
+form.angucomplete {
+	padding: 0;
+	margin: 0;
+}
+
+form.angucomplete.ng-invalid input {
     border: 1px solid red; 
 }
