changed the z-index for the menues, so the top overlapped the bottom one etc.

--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -254,8 +254,15 @@ html, body {
 	background: #fff;
 	border: 1px solid #000;
 	border-bottom: #fff;
+	z-index: 16;
 }
 .style-options-show {
+	z-index: 8;
+}
+.styleset-options-show.open {
+	z-index: 16;
+}
+.style-options-show.open {
 	z-index: 12;
 }
 .arrow {
