Fixed an old invalid css setting.

--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -280,7 +280,7 @@ hr {
 }
 .user-settings-options .user-email input {
 	width: auto;
-	border: -moz-border-radius: 1px;
+	-moz-border-radius: 1px;
 	-webkit-border-radius: 1px;
 	border-radius: 1px;
 	-webkit-appearance: none;
