fixed scrolling issue and made the unisquare stick in place

--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -2,7 +2,7 @@
 	float: left;
 }
 .section-unisquare {
-	position: relative;
+	position: fixed;
 	margin: 0 10px 0 0 !important;
 	padding: 10px !important;
 	width: 300px !important;
