--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -41,9 +41,11 @@ html, body {
 }
 .menu-left {
 	left: -260px;
+	border-right: 0;
 }
 .menu-right {
 	right: -260px;
+	border-left: 0;
 }
 
 .menu-left.open {
@@ -206,16 +208,13 @@ html, body {
 	position: relative;
 	margin: 0 9px 9px 0;
 	width: 66px;
-	width: calc(33% - 6px);
+	width: calc(33% - 10px);
 	height: 95px;
 	background: none #fefefe;
 	float: left;
 	border: 1px solid #ffff99;
 	box-shadow: 0px 5px 5px -5px #ccc;
 	cursor: pointer;
-}
-.projectDocument:nth-child(3n+2) {
-	margin-right: 0;
 }
 .projectDocument-link {
 	display: block;
@@ -310,6 +309,7 @@ textarea#renameProjectDocument, textarea#renameStyleset, textarea#renameStyle {
 	width: 100%;
 	height: 64px;
 	border: 1px solid #ffff99;
+	padding: 5px;
 	resize: none;
 	outline: none;
 	overflow: hidden;
@@ -624,23 +624,25 @@ li.typo p:first-child {
 
 .insertOption {
 	position: relative;
-	margin: 0 0 10px 0;
 	padding: 16px 0 16px 16px;
 	width: 110px;
-	width: calc(50% - 5px);
+	width: calc(50% - 10px);
 	background: none #fefefe;
 	float: left;
 	border: 1px solid #ffff99;
 	box-shadow: 0px 5px 5px -5px #ccc;
 	cursor: pointer;
 }
-.insertOption.first {
+.menu-left .insertOption {
 	margin: 0 10px 10px 0;
+}
+.menu-right .insertOption {
+	margin: 0 0 10px 10px;
 }
 .insertOption.expanded {
 	height: 128px;
 	margin-bottom: 0;
-	border-bottom: 0px;
+	border-bottom: 0;
 	box-shadow: none;
 	z-index: 2;
 }
@@ -651,26 +653,32 @@ li.typo p:first-child {
 .insertOptionProperties.expanded {
 	display: block;
 	position: relative;
-	margin: -1px 0 10px 0;
 	padding: 16px;
 	width: 230px;
-	width: calc(100%);
+	width: calc(100% - 10px);
 	height: auto;
 	background: none #fefefe;
 	float: left;
 	border: 1px solid #ffff99;
 	box-shadow: 0px 5px 5px -5px #ccc;
 }
+.menu-left .insertOptionProperties.expanded {
+	margin: -1px 10px 10px 0;
+}
+.menu-right .insertOptionProperties.expanded {
+	margin: -1px 0 10px 10px;
+}
 .outputOptionProperties {
 	display: block;
 	position: relative;
+	margin: 0 0 0 10px;
 	padding: 16px;
 	background: none #fefefe;
 	border: 1px solid #ffff99;
 	box-shadow: 0px 5px 5px -5px #ccc;
 }
 .outputOptionDownload {
-	margin: 10px 0 0;
+	margin: 10px 0 0 10px;
 }
 
 .not-selectable {
