--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -380,7 +380,7 @@ textarea#renameProjectDocument, textarea#renameStyleset, textarea#renameStyle {
 	background-color: #f3f3f3;
 }
 .typo {
-	margin: 0 0 10px 0;
+	margin: 0 10px 10px 0;
 	cursor: pointer;
 	position: relative;
 	overflow: visible;
@@ -404,7 +404,7 @@ li.typo p {
 li.typo p:first-child {
 	border: none;
 }
-.typo-children li {
+.typo-children-style {
 	position: relative;
 	background-color: #fff;
 	border: 1px solid #c6c6c6;
