--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -258,13 +258,21 @@ textarea {
 .registration-form {
 	float: left;
 }
+
 .registration-text {
 	font-weight: 900;
 	line-height: 32px;
 	margin: 0 10px 0 0;
-	width: 325px;
+	width: 375px;
 	float: left;
 }
+
+.social-registration-text {
+	font-weight: 900;
+	margin-bottom: 10px;
+	/* border: 2px solid; */
+}
+
 .registration-text.validate {
 	color: #fff;
 	text-align: center;
@@ -443,4 +451,34 @@ textarea {
 
 .autocomplete li.active .highlight {
   background: #fff265;
+}
+
+/*
+	TODO: "socialicons" styles COPIED from css/pages/frontpage.css: refactor into common location!
+		  If, instead, "socialicons" styles are placed in css/shared/default.css and this CSS is included in create/index.html, its style is completely broken.
+*/
+.socialicons {
+	width: 200px;
+	float: right;
+	margin-right: 300px;
+	/* border: 2px solid; */
+}
+
+.socialicon {
+	background-color: #fff;
+	border-radius: 50%;
+	width: 40px;
+	height: 40px;
+	padding: 10px;
+	font-size: 22px;
+	margin: 0 auto;
+	display: inline-block;
+}
+
+.socialicon:hover {
+	background-color: #fff265;
+}
+
+.socialicon a {
+	color: #ABACAF;
 }
