--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -270,7 +270,6 @@ textarea {
 .social-registration-text {
 	font-weight: 900;
 	margin-bottom: 10px;
-	/* border: 2px solid; */
 }
 
 .registration-text.validate {
@@ -455,7 +454,7 @@ textarea {
 
 /*
 	TODO: "socialicons" styles COPIED from css/pages/frontpage.css: refactor into common location!
-		  If, instead, "socialicons" styles are placed in css/shared/default.css and this CSS is included in create/index.html, its style is completely broken.
+		  If, instead, "socialicons" styles are placed in css/shared/default.css and this CSS is included in create/index.html, the page's style is completely broken.
 */
 .socialicons {
 	width: 200px;
