fixes #682 social-icons on registration bar

--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -149,9 +149,9 @@ input[type="password"], input[type="text"], input[type="email"] {
 	border: none;
 	background: #f6f6f6;
 	font-size: 15px;
-	width: 250px;
+	width: 25%;
 	height: 32px;
-	padding: 0 0 0 15px;
+	padding: 0 5px 0 5px;
 	margin: 0 5px 0 0;
 }
 input.has-error {
@@ -255,6 +255,12 @@ textarea {
 .green {
 	background-color: #5cb85c;
 }
+
+#registrationContainer{
+	width:99%;
+	margin:0 auto;
+}
+
 .registration-form {
 	float: left;
 }
@@ -262,17 +268,19 @@ textarea {
 .registration-text {
 	font-weight: 900;
 	line-height: 32px;
-	margin: 0 10px 0 0;
-	width: 375px;
+	width: 22%;
+	font-size:70%;
 	float: left;
 }
 
 .social-registration-text {
 	font-weight: 900;
 	bottom: 8px;
-	margin-right: 5px;
 	display: inline-block;
 	position: relative;
+	font-size:70%;
+	vertical-align: sub;
+	margin-right:5px;
 }
 
 .registration-text.validate {
@@ -460,20 +468,20 @@ textarea {
 		  If, instead, "socialicons" styles are placed in css/shared/default.css and this CSS is included in create/index.html, the page's style is completely broken.
 */
 .socialicons {
-	width: 300px;
+	width: 16%;
 	float: left;
-	margin-left: 100px;
 }
 
 .socialicon {
 	background-color: #fff;
 	border-radius: 50%;
-	width: 40px;
-	height: 40px;
+	width: 33px;
+	height: 33px;
 	padding: 10px;
-	font-size: 22px;
-	margin: 0 auto;
+	font-size: 15px;
+	text-align:center;
 	display: inline-block;
+	cursor:pointer;
 }
 
 .socialicon:hover {
