--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -269,8 +269,9 @@ textarea {
 	font-weight: 900;
 	line-height: 32px;
 	width: 22%;
-	font-size:70%;
+	font-size:15px;
 	float: left;
+	line-height: 1.3;
 }
 
 .social-registration-text {
@@ -278,7 +279,7 @@ textarea {
 	bottom: 8px;
 	display: inline-block;
 	position: relative;
-	font-size:70%;
+	font-size:15px;
 	vertical-align: sub;
 	margin-right:5px;
 }
