--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -267,11 +267,12 @@ textarea {
 
 .registration-text {
 	font-weight: 900;
-	line-height: 32px;
 	width: 22%;
 	font-size:15px;
 	float: left;
+	padding-top:7px;
 	line-height: 1.3;
+	margin-right:5px;
 }
 
 .social-registration-text {
@@ -478,17 +479,18 @@ textarea {
 	border-radius: 50%;
 	width: 33px;
 	height: 33px;
-	padding: 10px;
-	font-size: 15px;
+	padding: 5px;
+	font-size: 20px;
 	text-align:center;
 	display: inline-block;
 	cursor:pointer;
+
 }
 
 .socialicon:hover {
 	background-color: #fff265;
 }
 
-.socialicon a {
+.socialicons a {
 	color: #ABACAF;
 }
